--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2874,6 +2874,7 @@ body {
 @media screen and (min-width: 879px) {
   .textWithArrow_container {
     display: flex;
+    position: absolute;
   }
 }
 .sticky {
